# recap_parser

./: .gitignore  CMakeLists.txt  Directory.Build.props  README.md  Resource.rc  catalog.cpp  catalog.h  exporter.h  main.cpp  parser.cpp  recap_parser.sln  recap_parser.vcxproj  recap_parser.vcxproj.filters  registry.cpp  resource.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  test.yaml
res/: recap_parser.rc  recap_parser.res
